fix(calculator):change the bg color of the baclculator t a more gradient

--- a/page/assets/css/styles.css
+++ b/page/assets/css/styles.css
@@ -8,7 +8,12 @@
 
         body {
             font-family: 'Fredoka One', cursive;
-            background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
+            background: linear-gradient(135deg,
+          #b8cbb8 0%,
+          #b8cbb8 0%,
+          #cfb7ff 33%,
+          #f2d5ff 66%,
+          #ffbacd 100%);
             margin: 0;
             padding-top: 20px;
             padding-bottom: 40px;
@@ -113,7 +118,7 @@
         }
 
         .result-container {
-            background-color: var(--light);
+            background-color: whitesmoke;
             padding: 15px;
             border-radius: 10px;
             margin-top: 20px;
@@ -121,11 +126,12 @@
             font-size: 18px;
             min-height: 24px;
             transition: all 0.3s ease;
+            
         }
 
         .result-container.highlight {
             background-color: var(--accent);
-            color: white;
+            color: rgb(59, 15, 15);
             transform: scale(1.02);
         }
         .calculator-wrapper {
